--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,6 @@ TODO
 docs/_build
 docs/html
 build-tools/*.rpm
-transifex/settings/*-local.conf
 .installed.cfg
 bin
 build
@@ -20,13 +19,10 @@ eggs
 *\.egg/
 *egg-info
 parts
-transifex/transifex.egg-info
-transifex/transifex.db.sqlite
-transifex/logs
 site_media/media/reviews_files/*
-transifex/site_media/static
 *.rej
 .DS_Store
 htmlcov/*
 .coverage
 .*.swp
+node_modules
