--- a/package.json
+++ b/package.json
@@ -10,10 +10,17 @@
   "dependencies": {
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "bootstrap": "^4.0.0-alpha.6",
+    "bootstrap-sass": "^3.3.7",
     "node-sass": "^4.5.2",
     "react": "^15.5.4",
+    "react-dom": "^15.5.4",
     "sass-loader": "^6.0.3",
     "webpack": "^2.4.1"
+  },
+  "scripts": {
+    "webpack": "webpack"
   }
 }
